# eh-stash

./: .env.example  .gitignore  Makefile  README.md  docker-compose.pi.yaml  docker-compose.yaml  pyproject.toml
api/: Dockerfile  db.py  main.py  models.py  proxy_controller.py  requirements.txt
api/routers/: admin.py  galleries.py  proxy.py  stats.py
demo/: eh_demo.py  eh_detail_compare.py
docs/: sync_tasks.md
frontend/: .dockerignore  Dockerfile  doctor.config.json  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: admin.js  index.js
frontend/src/components/: ErrorBoundary.jsx  FilterPanel.jsx  GalleryCard.jsx  GalleryLightbox.css  GalleryLightbox.jsx  GroupModal.jsx  TagBadge.jsx
migrations/: 001_core_schema.sql  001_schema.sql  002_favorites.sql  002_sync_tasks.sql  003_favorites.sql  003_recommendation.sql  004_pi_sync.sql  004_preference_tfidf.sql  005_gallery_groups.sql  005_river_task_defs.sql  006_detail_extras.sql  007_gallery_comments.sql  010_river_task_defs.sql  011_drop_sync_tasks.sql
scraper/: Dockerfile  config.py  db.py  logic.py  loop.py  main.py  parser.py  requirements.txt
scraper-go/: go.mod  go.sum  main.go
scraper-go/client/: client.go
scraper-go/db/: db.go  task_defs.go
scraper-go/egress/: manager.go
scraper-go/parser/: parser.go  parser_test.go
scraper-go/ratelimit/: limiter.go  limiter_test.go
scraper-go/scheduler/: river.go  scheduler.go
scraper-go/task/: common.go  favorites.go  full.go  incremental.go
scraper-go/worker/: grouper.go
(+6 files in other folders)
